# python-bintest

./: .gitignore  README.md  pyproject.toml  setup.py
bintest/: __init__.py  bintest.py
examples/: testcase.py  tests_case.yml
